--- a/AddCrop.html
+++ b/AddCrop.html
@@ -22,7 +22,7 @@ if(isset($_POST['frm']))
     }
 }
 ?>
-<form action="AddCrop.php" method="post">
+<form action="AddCrop.html" method="post">
     <table align="center">
     <input type="hidden" name="frm" value="true" />
         <tr><td>Name of Crop</td><td><input type="text" name="Name" /></td></tr>
