--- a/AddCropDetail.html
+++ b/AddCropDetail.html
@@ -29,7 +29,7 @@ if(isset($_POST['frm']))
 }
 
 ?>
-<form action="AddCropDetail.php" method="post">
+<form action="AddCropDetail.html" method="post">
     <table align="center">
     <input type="hidden" name="frm" value="true" />
         <tr>
