--- a/rui_fish.html
+++ b/rui_fish.html
@@ -105,17 +105,17 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a href="index.php" class="navbar-brand" style="color:gold; !important;">বাংলার কৃষক</a>
+                <a href="index.html" class="navbar-brand" style="color:gold; !important;">বাংলার কৃষক</a>
                 <img src="images/logo2.png" alt="" style="max-width:50px; max-height:50px;">
 
             </div>
             <div class="collapse navbar-collapse" id="bspi">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.php">হোম</a></li>
+                    <li><a href="index.html">হোম</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="true">খাদ্যশস্য <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="rice.php">ধান</a></li>
+                            <li><a href="rice.html">ধান</a></li>
                             <li><a href="">পাঁট </a></li>
                             <li><a href="">গম </a></li>
                             <li><a href="">ভুট্টা</a></li>
@@ -130,7 +130,7 @@
                     <li class="dropdown ">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="true">গবাদি পশু<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="cow.php">গরু</a></li>
+                            <li><a href="cow.html">গরু</a></li>
                             <li><a href="#">ছাগল </a></li>
                             <li><a href="#">ভেড়া</a></li>
                             <li><a href="#">মহিষ</a></li>
@@ -144,21 +144,21 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-hover="dropdown" aria-expanded="true">মৎস্য সম্পদ <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="rui_fish.php">তেলাপিয়া</a></li>
+                            <li><a href="rui_fish.html">তেলাপিয়া</a></li>
                             <li><a href="">পাঙ্গাস</a></li>
                             <li><a href="">শিং</a></li>
                             <li><a href="">চিংড়ি</a></li>
                             <li><a href="">কৈ মাছ </a></li>
-                            <li><a href="fish.php">বিস্তারিত </a></li>
+                            <li><a href="fish.html">বিস্তারিত </a></li>
 
                         </ul>
                     </li>
-                    <li><a href="bazar.php">বাজার দর </a></li>
+                    <li><a href="bazar.html">বাজার দর </a></li>
 
-                    <li><a href="gallery.php">ছবি</a></li>
-                    <li><a href="vedio.php">চলচিত্র</a></li>
-                    <li><a href="about.php">আমাদের সম্পর্কে</a></li>
-                    <li><a href="contact.php">যোগাযোগ</a></li>
+                    <li><a href="gallery.html">ছবি</a></li>
+                    <li><a href="vedio.html">চলচিত্র</a></li>
+                    <li><a href="about.html">আমাদের সম্পর্কে</a></li>
+                    <li><a href="contact.html">যোগাযোগ</a></li>
                 </ul>
             </div>
         </div>
@@ -264,7 +264,7 @@
 
                             <li><a href="http://badc.gov.bd">বাংলাদেশ কৃষি উন্নয়ন কর্পোরেশন</a></li>
 
-                            <li><a href="http://www.barc.gov.bd/home.php">বাংলাদেশ কৃষি গবেষণা কাউন্সিল</a></li>
+                            <li><a href="http://www.barc.gov.bd/home.html">বাংলাদেশ কৃষি গবেষণা কাউন্সিল</a></li>
 
                             <li><a href="http://www.dae.gov.bd">কৃষি সম্প্রসারণ অধিদপ্তর</a></li>
                         </ul>
