--- a/crop.html
+++ b/crop.html
@@ -71,17 +71,17 @@ include 'connection.php';
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a href="index.php" class="navbar-brand" style="color:gold; !important;">বাংলার কৃষক</a>
+                    <a href="index.html" class="navbar-brand" style="color:gold; !important;">বাংলার কৃষক</a>
                     <img src="images/logo2.png" alt="" style="max-width:50px; max-height:50px;">
 
                 </div>
                 <div class="collapse navbar-collapse" id="bspi">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.php">হোম</a></li>
+                        <li><a href="index.html">হোম</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="true">খাদ্যশস্য <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="rice.php">ধান</a></li>
+                                <li><a href="rice.html">ধান</a></li>
                                 <li><a href="">পাঁট </a></li>
                                 <li><a href="">গম </a></li>
                                 <li><a href="">ভুট্টা</a></li>
@@ -96,7 +96,7 @@ include 'connection.php';
                         <li class="dropdown ">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="true">গবাদি পশু<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="cow.php">গরু</a></li>
+                                <li><a href="cow.html">গরু</a></li>
                                 <li><a href="#">ছাগল </a></li>
                                 <li><a href="#">ভেড়া</a></li>
                                 <li><a href="#">মহিষ</a></li>
@@ -110,16 +110,16 @@ include 'connection.php';
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-hover="dropdown" aria-expanded="true">মৎস্য সম্পদ <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="fish.php">মাছ</a></li>
+                                <li><a href="fish.html">মাছ</a></li>
 
                             </ul>
                         </li>
-                        <li><a href="bazar.php">বাজার দর </a></li>
+                        <li><a href="bazar.html">বাজার দর </a></li>
 
-                        <li><a href="gallery.php">ছবি</a></li>
-                        <li><a href="vedio.php">চলচিত্র</a></li>
-                        <li><a href="about.php">আমাদের সম্পর্কে</a></li>
-                        <li><a href="contact.php">যোগাযোগ</a></li>
+                        <li><a href="gallery.html">ছবি</a></li>
+                        <li><a href="vedio.html">চলচিত্র</a></li>
+                        <li><a href="about.html">আমাদের সম্পর্কে</a></li>
+                        <li><a href="contact.html">যোগাযোগ</a></li>
                     </ul>
                 </div>
             </div>
@@ -182,7 +182,7 @@ $row=mysqli_fetch_array($query);
                                     <td>
                                         <?php echo $rowx["RipenTime"]; ?>
                                     </td>
-                                    <td><a href="CropDetail.php?Id=<?php echo $rowx['id']; ?>">বিস্তারিত</a></td>
+                                    <td><a href="CropDetail.html?Id=<?php echo $rowx['id']; ?>">বিস্তারিত</a></td>
                                 </tr>
                                 <?php
                 }
@@ -275,7 +275,7 @@ $row=mysqli_fetch_array($query);
 
                                     <li><a href="http://badc.gov.bd">বাংলাদেশ কৃষি উন্নয়ন কর্পোরেশন</a></li>
 
-                                    <li><a href="http://www.barc.gov.bd/home.php">বাংলাদেশ কৃষি গবেষণা কাউন্সিল</a></li>
+                                    <li><a href="http://www.barc.gov.bd/home.html">বাংলাদেশ কৃষি গবেষণা কাউন্সিল</a></li>
 
                                     <li><a href="http://www.dae.gov.bd">কৃষি সম্প্রসারণ অধিদপ্তর</a></li>
                                 </ul>
